--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,6 @@
-html, body{
+@import '~antd/dist/antd.css';
+html,
+body {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -18,7 +20,6 @@ html, body{
 //   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 //     monospace;
 // }
-
 
 // #body {
 //   width: 100%;
