--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,63 +1,59 @@
-@import "baseLayout";
-@import "modules";
+@import 'baseLayout';
+@import 'modules';
 
+// header{
+//     @include layout;
+// }
 
+.inner {
+  display: grid;
+  grid-template-columns: 100px 2fr 1fr;
+  grid-template-rows: 70px;
+  padding-top: 5px;
 
-header{
-    @include layout;
+  .logo {
+    display: flex;
+    align-items: center;
+    a {
+      @include decoration-none;
+    }
+  }
+
+  .menu {
+    display: flex;
+    align-items: center;
+
+    li {
+      margin-left: 18px;
+      list-style: none;
+
+      a {
+        @include decoration-none;
+      }
+    }
+  }
+
+  .rogin-btn {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    // ボタンのデザイン
+    div {
+      display: inline-block;
+      line-height: 36px;
+      background: $mainColor;
+      padding: 0.5em 1em;
+      text-decoration: none;
+      color: #fff;
+      border-radius: 3px;
+      cursor: pointer;
+      user-select: none;
+      margin-left: 20px;
+    }
+  }
 }
 
-
-.inner{
-    display: grid;
-    grid-template-columns: 100px 2fr 1fr;
-    grid-template-rows: 70px;
-    padding-top: 5px;
-
-    .logo{
-        display: flex;
-        align-items: center;
-        a{
-            @include decoration-none;
-        }
-    }
-
-    .menu{
-        display: flex;
-        align-items: center;
-
-        li{
-            margin-left: 18px;
-            list-style: none;
-
-            a{
-                @include decoration-none;
-            }
-        }
-    }
-
-    .rogin-btn{
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        
-        // ボタンのデザイン
-        div {
-            display: inline-block;
-            line-height: 36px;
-            background: $mainColor;
-            padding: 0.5em 1em;
-            text-decoration: none;
-            color: #fff;
-            border-radius: 3px;
-            cursor: pointer;
-            user-select: none;
-            margin-left: 20px;
-        }
-    }
-}
-
-
-.header-borde-line{
-    border: 0.5px block solid;
+.header-borde-line {
+  border: 0.5px block solid;
 }
