--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,16 @@
-@import '~antd/dist/antd.css';
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+a {
+  text-decoration: none;
+  color: #666;
 }
+
+// @import '~antd/dist/antd.css';
+// html,
+// body {
+//   width: 100%;
+//   height: 100%;
+//   margin: 0;
+//   padding: 0;
+// }
 
 // body {
 //   margin: 0;
