--- a/src/components/planRelated/detailPlan/index.module.scss
+++ b/src/components/planRelated/detailPlan/index.module.scss
@@ -1,5 +1,5 @@
-@import '../../styles/baseLayout';
-@import '../../styles/modules/color';
+@import '../../../styles/baseLayout';
+@import '../../../styles/modules/color';
 
 .detailPlanCard {
   background: skyblue;
