--- a/src/components/FormRelated/tagForm/index.scss
+++ b/src/components/FormRelated/tagForm/index.scss
@@ -1,5 +1,5 @@
-@import '../../styles/baseLayout';
-@import '../../styles/modules/color';
+@import '../../../styles/baseLayout';
+@import '../../../styles/modules/color';
 
 .tag-form {
   margin-top: 40px;
