--- a/src/components/profileRelated/detailProfile/index.module.scss
+++ b/src/components/profileRelated/detailProfile/index.module.scss
@@ -1,13 +1,13 @@
 @import '../../../styles/baseLayout';
 @import '../../../styles/modules/color';
 
-.detailPlanCard {
-  background: skyblue;
-}
+// .detailPlanCard {
+//   background: skyblue;
+// }
 
 .circle {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background: skyblue;
+  // background: skyblue;
 }
