契約する時のモーダルのデザインを変更

--- a/src/components/plan/TogglePlanRequestBtn/planContractModal/index.module.scss
+++ b/src/components/plan/TogglePlanRequestBtn/planContractModal/index.module.scss
@@ -1,7 +1,7 @@
-// .attention {
-//   padding: 0.5em 1em;
-//   margin: 2em 0;
-//   color: #ff7d6e;
-//   background: #ffebe9;
-//   border-top: solid 10px #ff7d6e;
-// }
+.attention {
+  padding: 0.5em 1em;
+  //   margin: 2em 0;
+  color: #ff7d6e;
+  background: #ffebe9;
+  //   border-top: solid 10px #ff7d6e;
+}
