プロフィールの詳細ページファイル構成修正

--- a/src/components/profile/detailProfile/RightSide/index.module.scss
+++ b/src/components/profile/detailProfile/RightSide/index.module.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/baseLayout';
-@import '../../../styles/modules/color';
+@import '../../../../styles/baseLayout';
+@import '../../../../styles/modules/color';
 
 .name {
   background: #f7f9f9;
