--- a/src/components/Layouts/ToggleHeader/GuestHeader/index.module.scss
+++ b/src/components/Layouts/ToggleHeader/GuestHeader/index.module.scss
@@ -3,30 +3,70 @@
 
 header {
   .headerContainer {
-    height: 64px;
-    border-bottom: solid 0.7px;
-    margin-bottom: 48px;
+    height: 40px;
+    // border-bottom: solid 0.4px;
+    // margin-bottom: 48px;
+    .logoArea {
+      background: red;
+      background: #fff;
+      margin-top: 4px;
+    }
+    .searchArea {
+      // background: yellow;
+      background: #fff;
+      text-align: end;
+      .searchLogo {
+        font-size: 18px;
+      }
+      .searchForm {
+        display: none;
+      }
+    }
+    .navbarArea {
+      // background: blue;
+      background: #fff;
+      text-align: end;
+      .menu {
+        font-size: 18px;
+      }
+    }
   }
-
   .btn {
-    display: inline-block;
-    line-height: 36px;
-    background: $mainColor;
-    padding: 0.1em 0.8em;
-    text-decoration: none;
-    color: #fff;
-    border-radius: 3px;
-    cursor: pointer;
-    user-select: none;
+    display: none;
   }
 }
 
-// .left {
-//   background: skyblue;
-// }
-// .center {
-//   background: yellow;
-// }
-// .right {
-//   background: green;
-// }
+// 768以上の時は、ボタンがある
+@media screen and (min-width: 992px) {
+  header {
+    .headerContainer {
+      height: 64px;
+      border-bottom: solid 0.7px;
+      margin-bottom: 48px;
+      .searchArea {
+        .searchLogo {
+          display: none;
+        }
+        .searchForm {
+          display: block;
+        }
+      }
+      .navbarArea {
+        .menu {
+          display: none;
+        }
+      }
+    }
+    .btn {
+      display: inline-block;
+      line-height: 36px;
+      background: $mainColor;
+      padding: 0.1em 0.8em;
+      text-decoration: none;
+      color: #fff;
+      border-radius: 3px;
+      cursor: pointer;
+      user-select: none;
+    }
+  }
+}
