--- a/src/components/profile/detailProfile/RightSide/ReviewButton/index.module.scss
+++ b/src/components/profile/detailProfile/RightSide/ReviewButton/index.module.scss
@@ -1,5 +1,5 @@
-span {
-  margin-left: 8 !important;
-  font-size: 16 !important;
+.btn {
+  margin-left: 8px !important;
+  font-size: 16px !important;
   user-select: none;
 }
