トップページの検索 変更

--- a/src/components/form/searchForm/index.module.scss
+++ b/src/components/form/searchForm/index.module.scss
@@ -16,14 +16,11 @@
   // }
 }
 
-@media screen and (max-width: 760px) {
-  .searchForm {
-    width: 95% !important;
-  }
-  // .searchForm {
-  //   display: block !important;
-  // }
-}
+// @media screen and (max-width: 760px) {
+//   .searchForm {
+//     width: 95% !important;
+//   }
+// }
 
 // min-width => 1200px以上の時は
 // max-width => 760以下の時は
