headerの検索欄の位置変更

--- a/src/components/Layouts/ToggleHeader/GuestHeader/index.module.scss
+++ b/src/components/Layouts/ToggleHeader/GuestHeader/index.module.scss
@@ -1,6 +1,7 @@
 @import '../../../../styles/baseLayout';
 @import '../../../../styles/modules/color';
 
+// スマホ用のレイアウト
 header {
   .headerContainer {
     height: 40px;
