--- a/src/components/form/searchForm/index.module.scss
+++ b/src/components/form/searchForm/index.module.scss
@@ -10,6 +10,7 @@
 @media screen and (min-width: 1200px) {
   .searchForm {
     width: 480px !important;
+    font-size: 16px;
   }
   // .searchForm {
   //   display: block !important;
