--- a/src/components/Layouts/ToggleHeader/HeaderLogo/index.module.scss
+++ b/src/components/Layouts/ToggleHeader/HeaderLogo/index.module.scss
@@ -1,5 +1,13 @@
 .logoArea {
-  background: red;
-  background: #fff;
   margin-top: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  /*画面サイズが768pxからここを読み込む　*/
+  .logoArea {
+    background: red;
+    background: #fff;
+    margin-top: 8px;
+    font-size: 24px;
+  }
 }
