--- a/src/components/Layouts/ToggleHeader/MemberHeader/index.module.scss
+++ b/src/components/Layouts/ToggleHeader/MemberHeader/index.module.scss
@@ -3,30 +3,17 @@
 
 header {
   .headerContainer {
-    height: 64px;
-    border-bottom: solid 0.7px;
-    margin-bottom: 48px;
-  }
-
-  .btn {
-    display: inline-block;
-    line-height: 36px;
-    background: $mainColor;
-    padding: 0.1em 0.8em;
-    text-decoration: none;
-    color: #fff;
-    border-radius: 3px;
-    cursor: pointer;
-    user-select: none;
+    height: 40px;
   }
 }
 
-// .left {
-//   background: skyblue;
-// }
-// .center {
-//   background: yellow;
-// }
-// .right {
-//   background: green;
-// }
+// 768以上の時は、ボタンがある
+@media screen and (min-width: 992px) {
+  header {
+    .headerContainer {
+      height: 64px;
+      border-bottom: solid 0.7px;
+      margin-bottom: 48px;
+    }
+  }
+}
