topページのheight調整

--- a/src/components/Layouts/Footer/index.module.scss
+++ b/src/components/Layouts/Footer/index.module.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/modules/color';
 
 footer {
-  margin-top: 80px;
+  // margin-top: 80px;
   background: #354341;
   height: 150px;
   .logo {
