--- a/src/components/Layouts/ToggleHeader/GuestHeader/index.module.scss
+++ b/src/components/Layouts/ToggleHeader/GuestHeader/index.module.scss
@@ -13,8 +13,9 @@ header {
   header {
     .headerContainer {
       height: 64px;
-      border-bottom: solid 0.7px;
-      margin-bottom: 48px;
+      // height: 8vh;
+      border-bottom: solid 0.7px #d9d9d9;
+      // margin-bottom: 48px;
     }
     // ログイン,新規登録ボタン
     .btn {
