--- a/src/styles/ProfileListPage.module.scss
+++ b/src/styles/ProfileListPage.module.scss
@@ -1,16 +1,11 @@
-.mobileProfileList {
-  margin-bottom: 70px;
-}
-.pcProfileList {
-  display: none;
+// 768以上の時は、ボタンがある
+.profileList {
+  margin-bottom: 48px;
 }
 
-// 768以上の時は、ボタンがある
 @media screen and (min-width: 768px) {
-  .pcProfileList {
-    display: block;
-  }
-  .mobileProfileList {
-    display: none;
+  .profileList {
+    margin-top: 48px;
+    height: 100vh;
   }
 }
