PCによりheightの違いをVhで対応

--- a/src/components/Layouts/ToggleHeader/MemberHeader/index.module.scss
+++ b/src/components/Layouts/ToggleHeader/MemberHeader/index.module.scss
@@ -12,8 +12,7 @@ header {
   header {
     .headerContainer {
       height: 64px;
-      border-bottom: solid 0.7px;
-      margin-bottom: 48px;
+      border-bottom: solid 0.7px #d9d9d9;
     }
   }
 }
