--- a/src/components/profile/ProfileCard/index.module.scss
+++ b/src/components/profile/ProfileCard/index.module.scss
@@ -2,9 +2,9 @@
   color: red;
 }
 
-// .card {
-//   height: 240px;
-// }
+.card {
+  height: 240px;
+}
 
 @media screen and (min-width: 768px) {
   .card {
